# viziphant

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  Testbook.ipynb  Testscript.py  cch_cluster.py  cch_demo.py  compare_exp-mdl.ipynb  compare_exp-mdl_custom_io.ipynb  convert_data.py  min_script.py  pyproject.toml  readthedocs.yml  setup.py  spikes_L4E.h5  ue_testscript.py
.github/workflows/: CI_actions.yml  ebrains.yml
doc/: acknowledgements.rst  acknowledgments.rst  authors.rst  conf.py  index.rst  install.rst  modules.rst  release_notes.rst
doc/bib/: viziphant.bib
doc/reference/: events.rst  rasterplot.rst  spade.rst  statistics.rst  (+2 more)
examples/: example_plot_UEs.py
plots/: elph_functions.py  generic.py  rasterplot.py
requirements/: environment.yml  requirements-docs.txt  requirements-tests.txt  requirements.txt
src/: cch_cluster.jdf  cch_cluster_mip_cpp.jdf  cch_cluster_mip_cpp.py  cch_cluster_poiss.jdf  cch_cluster_poiss.py  cch_cluster_spinest_blau.jdf  cch_cluster_spinest_blau.sh  cch_cluster_spinnaker.py  cch_cluster_spinnest.py  cch_collect.py  cch_collect_poiss.py  cch_collect_spinnest.py  cch_demo.py  cch_demo_spinest.py  cch_pop_cluster_spinnest.py  cch_pop_collect_spinnest.py  cch_spinnest_jobarray.sh  convert_data_corr_poiss.py  corrcoeff_cluster_spinnest.py  corrcoeff_demo.py  corrcoeff_spinnest_jobarray.sh
viziphant/: __init__.py  array_data.py  asset.py  elph_functions.py  events.py  gpfa.py  patterns.py  rasterplot.py  spade.py  spike_train_correlation.py  spike_train_synchrony.py  statistics.py  tensor_component_analysis.py  unitary_event_analysis.py  unitary_event_analysis_PLOT.py  utils.py
(+9 files in other folders)
